--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="counter">
-        <div class="couter-number" id="js-counter">0</div>
-        <button type="button" class="button js-button">-</button>
-        <button type="button" class="button js-button">+</button>
+        <div class="counter-number" id="js-counter">0</div>
+        <button type="button" class="button js-button">-1</button>
+        <button type="button" class="button js-button">+1</button>
         <button type="button" class="button" id="js-reset-button">Reset</button>
     </div>
     <script src="./counter.js"></script>
